--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body{
     background-color: rgb(249, 247, 242);
 }
 
-.quizlogo-contain img{
+.logo-contain img{
     width: 20px;
 }
 
-.quizlogo{
+.logo{
     text-decoration: none;
     color: rgb(45, 160, 181);
     font-size: 30px;
